--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Drama'
 - !lcc 'PT'
+- GITenberg
 title: 'Die Prinzessin Girnara: Weltspiel und Legende'
 url: http://www.gutenberg.org/ebooks/15952
